--- a/src/newversion-v1.ui
+++ b/src/newversion-v1.ui
@@ -12,27 +12,30 @@
     <property name="can_focus">False</property>
     <property name="stock">gtk-delete</property>
   </object>
-  <object class="GtkWindow">
+  <object class="GtkWindow" id="calc_window">
     <property name="can_focus">False</property>
     <property name="halign">center</property>
     <property name="valign">center</property>
+    <property name="hexpand">True</property>
+    <property name="vexpand">True</property>
     <property name="window_position">center</property>
-    <property name="default_width">8</property>
-    <property name="default_height">6</property>
+    <property name="default_width">600</property>
+    <property name="default_height">350</property>
     <property name="icon_name">phone-symbolic</property>
     <child type="titlebar">
-      <object class="GtkBox">
+      <object class="GtkBox" id="titlebar_box">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="spacing">1</property>
         <child>
-          <object class="GtkButton">
+          <object class="GtkButton" id="close_button">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <property name="image">image2</property>
             <property name="relief">none</property>
             <property name="always_show_image">True</property>
+            <signal name="clicked" handler="exit_button_clicked" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -44,13 +47,13 @@
       </object>
     </child>
     <child>
-      <object class="GtkBox">
+      <object class="GtkBox" id="calc_main_box">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">5</property>
         <child>
-          <object class="GtkBox">
+          <object class="GtkBox" id="history_box">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="spacing">5</property>
@@ -68,7 +71,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="last">
+              <object class="GtkLabel" id="last_formula_label">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="label" translatable="yes">sin(cos(x^2)^(1*-100))*x=100</property>
@@ -91,7 +94,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkEntry" id="src_str">
+          <object class="GtkEntry" id="src_str_entry">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="max_length">255</property>
@@ -120,7 +123,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkBox">
+          <object class="GtkBox" id="graph_size_box">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="opacity">0.29999999999999999</property>
@@ -249,7 +252,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkGrid">
+          <object class="GtkGrid" id="keyboard_grid">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="margin_left">5</property>
@@ -502,24 +505,11 @@
             </child>
             <child>
               <object class="GtkButton">
-                <property name="label" translatable="yes">Graph</property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-                <property name="width">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton">
                 <property name="label" translatable="yes">sin</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <signal name="clicked" handler="on_button_clicked" swapped="no"/>
+                <signal name="clicked" handler="button_clicked" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -646,6 +636,19 @@
                 <property name="left_attach">1</property>
                 <property name="top_attach">4</property>
                 <property name="width">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton">
+                <property name="label" translatable="yes">Graph</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">0</property>
+                <property name="width">3</property>
               </packing>
             </child>
           </object>
