func buutons done

--- a/src/newversion-v1.ui
+++ b/src/newversion-v1.ui
@@ -293,6 +293,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">4</property>
@@ -305,6 +306,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">3</property>
@@ -509,7 +511,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <signal name="clicked" handler="button_clicked" swapped="no"/>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -522,6 +524,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -534,6 +537,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -558,6 +562,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -570,6 +575,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -582,6 +588,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">1</property>
@@ -594,6 +601,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">2</property>
@@ -606,6 +614,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">2</property>
@@ -618,6 +627,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="func_button_clicked" object="src_str_entry" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">2</property>
