--- a/src/newversion-v1.ui
+++ b/src/newversion-v1.ui
@@ -664,12 +664,17 @@
               </packing>
             </child>
             <child>
-              <object class="GtkEntry" id="X_value">
+              <object class="GtkEntry" id="X_value_entry">
+                <property name="name">X_value_entry</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="max_length">16</property>
                 <property name="width_chars">7</property>
                 <property name="max_width_chars">16</property>
                 <property name="placeholder_text" translatable="yes">X value (default 0)</property>
+                <property name="input_purpose">digits</property>
+                <property name="input_hints">GTK_INPUT_HINT_SPELLCHECK | GTK_INPUT_HINT_NONE</property>
+                <signal name="focus-out-event" handler="x_focus_out" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">1</property>
