--- a/src/newversion-v1.ui
+++ b/src/newversion-v1.ui
@@ -116,7 +116,7 @@
                 <property name="max_length">255</property>
                 <property name="max_width_chars">255</property>
                 <property name="xalign">1</property>
-                <property name="placeholder_text" translatable="yes">write formula here</property>
+                <property name="placeholder_text" translatable="yes">type formula here</property>
               </object>
               <packing>
                 <property name="expand">False</property>
