--- a/src/newversion-v3.ui
+++ b/src/newversion-v3.ui
@@ -65,6 +65,20 @@
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
+              <object class="GtkDrawingArea" id="graph_area">
+                <property name="name">graph_area</property>
+                <property name="width_request">10</property>
+                <property name="height_request">100</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkBox" id="history_box">
                 <property name="name">history_box</property>
                 <property name="visible">True</property>
