--- a/src/newversion-v3.ui
+++ b/src/newversion-v3.ui
@@ -67,10 +67,11 @@
             <child>
               <object class="GtkDrawingArea" id="graph_area">
                 <property name="name">graph_area</property>
-                <property name="width_request">10</property>
-                <property name="height_request">100</property>
+                <property name="width_request">550</property>
+                <property name="height_request">200</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <signal name="draw" handler="on_draw" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
