--- a/src/newversion-v3.ui
+++ b/src/newversion-v3.ui
@@ -71,7 +71,7 @@
                 <property name="height_request">200</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <signal name="draw" handler="on_draw" swapped="no"/>
+                <signal name="draw" handler="on_draw" object="last_expr_label" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">True</property>
