--- a/src/newversion-v7.ui
+++ b/src/newversion-v7.ui
@@ -860,6 +860,17 @@ Duration</property>
                       <item id="9" translatable="yes">9 month</item>
                       <item id="12" translatable="yes">1 year</item>
                       <item id="18" translatable="yes">1.5 year</item>
+                      <item id="24" translatable="yes">2 year</item>
+                      <item id="36" translatable="yes">3 year</item>
+                      <item id="48" translatable="yes">4 year</item>
+                      <item id="60" translatable="yes">5 year</item>
+                      <item id="72" translatable="yes">6 year</item>
+                      <item id="84" translatable="yes">7 year</item>
+                      <item id="120" translatable="yes">10 year</item>
+                      <item id="180" translatable="yes">15 year</item>
+                      <item id="240" translatable="yes">20 year</item>
+                      <item id="300" translatable="yes">25 year</item>
+                      <item id="360" translatable="yes">30 year</item>
                     </items>
                     <child internal-child="entry">
                       <object class="GtkEntry">
@@ -1014,7 +1025,6 @@ Credit amount</property>
                 <property name="vexpand">True</property>
                 <property name="row_spacing">60</property>
                 <property name="column_spacing">5</property>
-                <property name="column_homogeneous">True</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
@@ -1030,7 +1040,7 @@ Credit amount</property>
                   <packing>
                     <property name="left_attach">0</property>
                     <property name="top_attach">0</property>
-                    <property name="width">2</property>
+                    <property name="width">3</property>
                   </packing>
                 </child>
                 <child>
@@ -1071,6 +1081,8 @@ Credit amount</property>
                     <property name="name">monthly_payment_label</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">8768</property>
+                    <property name="xalign">1</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -1082,6 +1094,8 @@ Credit amount</property>
                     <property name="name">overpayment_label</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">5216</property>
+                    <property name="xalign">1</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
@@ -1093,9 +1107,47 @@ Credit amount</property>
                     <property name="name">total_payment_label</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">105216</property>
+                    <property name="xalign">1</property>
                   </object>
                   <packing>
                     <property name="left_attach">1</property>
+                    <property name="top_attach">3</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">RUB</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">2</property>
+                    <property name="top_attach">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">RUB</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">2</property>
+                    <property name="top_attach">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">RUB</property>
+                    <property name="xalign">0</property>
+                  </object>
+                  <packing>
+                    <property name="left_attach">2</property>
                     <property name="top_attach">3</property>
                   </packing>
                 </child>
