--- a/src/newversion-v7.ui
+++ b/src/newversion-v7.ui
@@ -314,7 +314,7 @@
                     <property name="max_length">255</property>
                     <property name="activates_default">True</property>
                     <property name="max_width_chars">255</property>
-                    <property name="xalign">1</property>
+                    <property name="xalign">0.94999998807907104</property>
                     <property name="truncate_multiline">True</property>
                     <property name="placeholder_text" translatable="yes">type formula here</property>
                   </object>
